[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ragged_llama"
version = "0.0.1"
description = "Corporate wiki chatbot implementation of a RAG-based LLM."
authors = [
  { name = "CeleryExchange" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
known_first_party = ["ragged_llama"]
force_sort_within_sections = true
